# POC-Excel-Capabilities

./: .gitignore  POC.md  README.md  main.py  pyproject.toml  requirements.txt  standalone.bat  test.md  test_cases.md  test_cases_data.xlsx
01-pandas_and_LLM/: main.py
02-pandas_and_duckdb/: main.py
04-agent_with_dbtools/: db_agent.ipynb  sql_database_agent.ipynb  sql_traced_agent.ipynb  test.ipynb  test1.ipynb  tools.py
04-agent_with_dbtools/db/: new.duckdb.wal  test.duckdb.wal
04-agent_with_tools/: agent.py  requirements.txt
05-Pure_RAG_agent/: 01-rag_agent.ipynb  02-rag_agent.ipynb  README.md  rag_agent.ipynb
05-Pure_RAG_agent/.ipynb_checkpoints/: 02-rag_agent-checkpoint.ipynb
05-Pure_RAG_agent/vectorstore_0417ffdb_1761734799/: index.pkl
05-RAG_based_agent/: agent.py  app.py  base.ipynb  data.db  milvus_test.py
05-RAG_based_agent/.ipynb_checkpoints/: base-checkpoint.ipynb
06-Pure_RAG_agent/: README.md  agentic_rag.ipynb  final_rag 1.ipynb  first.ipynb
06-Pure_RAG_agent/movie_product_vectorstore/: index.pkl
06-Pure_RAG_agent/vectorstore_0417ffdb_1761549369/: index.pkl
06-agentic_rag_with_dbtool/: agent1.0.ipynb  agent2.0.ipynb  agent3.0.ipynb  agent_with_tools.ipynb  rag.ipynb
06-agentic_rag_with_dbtool/.ipynb_checkpoints/: agent2.0-checkpoint.ipynb
07-MCP/: README.md  app.py  mcp_client.py  rag_mcp_server.py  requirements.txt
Docs/: Test-Cases.xlsx
ai_agent/: SUMMARY.md  cleaner.py  test_setup.py
data/: electronics.xlsx  expense.xlsx
extra_files/04_sql_agent/: README.md  app.py  cleaner.py
manul_test_cases/: main.ipynb
milvus_test/: remote.py  remote2.py  test.py  test1.py  test2.py  test3.py  test4.py
pandas_amd_LLMs/: execution_query.py  final.py
pandas_and_LLMs/: chat.py  final.py
pandas_with_duckdb_gemini/: chat.py
polars_with_duckdb_gemini/: nlq_with_gemini.py
rag_with_gemini/: chat_rag.py  rag_02.py  rag_03.py
src/: version-1.0.ipynb  version-1.1.ipynb
(+6 files in other folders)
