[project]
name = "poc-excel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.2",
    "chardet>=5.2.0",
    "coloredlogs>=15.0.1",
    "diskcache>=5.6.3",
    "duckdb>=1.4.1",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.2",
    "filelock>=3.20.0",
    "google-ai-generativelanguage>=0.6.15",
    "google-generativeai>=0.8.5",
    "gradio>=3.36.1",
    "gradio-client>=1.13.3",
    "groq>=0.33.0",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.4.10",
    "lancedb>=0.25.2",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-groq>=1.0.0",
    "langchain-milvus>=0.2.2",
    "langchain-openai>=1.0.1",
    "langfuse>=2.60.10",
    "langfuse-langchain>=2.60.10.1",
    "langgraph>=1.0.2",
    "langgraph-runtime-inmem>=0.14.1",
    "langgraph-sdk>=0.2.9",
    "loguru>=0.7.3",
    "matplotlib-inline>=0.2.1",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "openpyxl>=3.1.5",
    "opentelemetry-api>=1.19.0",
    "opentelemetry-sdk>=1.19.0",
    "orjson>=3.11.4",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "polars>=1.35.1",
    "protobuf>=3.20.2,<4.21.0",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.3",
    "pymilvus>=2.5.16",
    "pypdf>=6.1.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "sse-starlette>=3.0.2",
    "striprtf>=0.0.29",
    "structlog>=25.5.0",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "traceloop-sdk>=0.0.44",
    "transformers>=4.57.1",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.38.0",
]
